brat/test/golden/error/portpull.brat.golden
Error in test/golden/error/portpull.brat@6:22-31
id2 = x,y => (id, id)(a1:x, y)
                     ^^^^^^^^^

  Port a1 is ambiguous in (a1 :: Nat), (a1 :: Nat)

